src/main/default/objects/Task_for_Project__c/Task_for_Project__c.object-meta.xml
<CustomObject>
    <label>Project task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>