src/main/default/objects/Task_for_Project__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>